Trying to fix white space on mobile

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -145,7 +145,7 @@ footer {
   	height: 10px;
   }
 
-  html {
+  html, body {
   	overflow-x: hidden;
   }
 }
